Bytt till engelska

--- a/spiderman.html
+++ b/spiderman.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Superman</title>
+<title>Spiderman</title>
 <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
@@ -18,7 +18,7 @@
  </a>
  Superman
  <h1> Spiderman </h1>
-<p> Tjena, jag är Spiderman. </p>
+<p> Hey, I'm Spiderman.</p>
 <img src="spiderman.jpg"> 
 </body>
 </html>
