--- a/superman.html
+++ b/superman.html
@@ -18,7 +18,7 @@ Spiderman
  </a>
  Superwoman
  <h1> Superman </h1> 
-<p> Tjenare,jag är Superman. </p>
+<p> Hello, I am Superman. </p>
 <img src="superman.jpg"> 
 </body>
 </html>
