--- a/superwoman.html
+++ b/superwoman.html
@@ -18,7 +18,7 @@
  </a>
 Spiderman 
  <h1> Superwoman </h1>
-<p> Hej, jag är Superwoman. </p>
+<p> Hi, I am Superwoman. </p>
 <img src="superwoman.jpg"> 
 </body>
 </html>
