--- a/superwoman.html
+++ b/superwoman.html
@@ -3,6 +3,8 @@
 <meta charset="utf-8">
 <title>Superwoman</title>
 <link href="style.css" type="text/css" rel="stylesheet">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="main.js" > </script>
 </head>
 <body>     
 <a href="index.html" >
